// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="ds-form-control-select__dropdown-options-item"
  onMouseDown={[Function]}
  style={Object {}}
>
  test label
</div>
`;

exports[`renders correctly as collection option with preview 1`] = `
<div
  className="ds-form-control-select__dropdown-options-item ds-form-control-select__dropdown-options-item--collection"
  onMouseDown={[Function]}
  style={Object {}}
>
  <div
    className="ds-form-control-select__dropdown-options-preview"
  >
    <img
      alt="test label"
      src="test-image.jpg"
    />
  </div>
  test label
</div>
`;

exports[`renders correctly as collection option without preview 1`] = `
<div
  className="ds-form-control-select__dropdown-options-item ds-form-control-select__dropdown-options-item--collection"
  onMouseDown={[Function]}
  style={Object {}}
>
  test label
</div>
`;

exports[`renders correctly with preview 1`] = `
<div
  className="ds-form-control-select__dropdown-options-item"
  onMouseDown={[Function]}
  style={Object {}}
>
  test label
  <div
    className="ds-form-control-select__dropdown-options-preview --is-full-width"
  >
    <div
      className="ds-form-control-select__dropdown-options-preview-icon"
    >
      <span>
        
      </span>
    </div>
  </div>
</div>
`;
